@@ -1140,6 +1140,17 @@ image = font.png
       </varlistentry>
 
       <varlistentry>
+        <term><emphasis role="bold">evPlayImage</emphasis></term>
+        <listitem>
+          <para>
+            Lädt ein CD-/(S)VCD-/DVD-Abbild oder DVD-Kopie (mit dem
+            Dateiauswahl-Dialog) und spielt es ab, als ob es eine reelle Disc
+            wäre.
+          </para>
+        </listitem>
+      </varlistentry>
+
+      <varlistentry>
         <term><emphasis role="bold">evLoadURL</emphasis></term>
         <listitem>
           <para>
